--- a/force-app/main/default/lwc/expenses/expenses.html
+++ b/force-app/main/default/lwc/expenses/expenses.html
@@ -10,8 +10,8 @@
     </template>
 
     <template if:true={adminPage}>
-            <c-admin-page onshowvaluechange={hanldeShowValueChange} work-type-id={workTypeId}>
-            </c-admin-page>
-        </template>
+        <c-admin-page onshowvaluechange={hanldeShowValueChange}>
+        </c-admin-page>
+    </template>
 
 </template>
